# multi-agent-desk

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  go.mod  go.sum  justfile  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rust-toolchain.toml
.agents/: README.md  registry.json
.agents/roles/: bug-diagnose.md  bug-fix.md  bug-verify.md  feature-build.md  feature-plan.md  feature-review.md  feature-verify.md  provider-spike.md  security-review.md  ship.md
.claude/: review-settings.json
.claude/agents/: bug-diagnose.md  bug-fix.md  bug-verify.md  feature-build.md  feature-plan.md  feature-review.md  feature-verify.md  provider-spike.md  security-review.md  ship.md
.claude/hooks/: review-plan.sh
.codex/: config.toml
.codex/agents/: bug-diagnose.toml  bug-fix.toml  bug-verify.toml  feature-build.toml  feature-plan.toml  feature-review.toml  feature-verify.toml  provider-spike.toml  security-review.toml  ship.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml
.github/workflows/: browser-key-spike.yml  ci.yml  governance.yml  spike-e2ee.yml  spike-windows-conpty.yml  spike-windows-named-pipe.yml  spike-windows-sidecar.yml
docs/: ARCHITECTURE.md  DATA_MODEL.md  IMPLEMENTATION_PLAN.md  PROVIDER_ADAPTER.md  PROVIDER_COMPATIBILITY.md  RESEARCH_LOG.md  ROADMAP.md  THREAT_MODEL.md  USER_GUIDE.md
docs/spikes/windows/tauri-sidecar-probe/src-tauri/: Cargo.toml  tauri.conf.json
docs/spikes/windows/tauri-sidecar-probe/src-tauri/src/: main.rs
(+579 files in other folders)
